多渠道打包配置，添加多渠道集成不同推送模式方案

--- a/app/src/huawei/res/values/strings.xml
+++ b/app/src/huawei/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">华为</string>
+    <string name="init_clazz">com.gwh.studyplan.PushHuaweiInit</string>
 </resources>
