--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">studyPlan</string>
+    <string name="init_clazz">com.gwh.studyplan.PushCommonInit</string>
 </resources>
